# odfinder

./: .gitignore  AGENTS.md  AUTHORS  INSTALL  MANIFEST.in  README.md  pyproject.toml  setup.py  stdeb.cfg
.github/workflows/: ci.yml  release.yml
data/: odfinder.desktop
data/ui/: odfinder.ui
i18n/: Makefile  POT_PY_FILES  POT_UI_FILES  es_ES.po  odfinder.pot
odfinder/: __init__.py  command_line.py  odfinder_app.py  utils.py
tests/: test_odfinder_app.py  test_utils.py
