[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odfinder"
description = "Searches content inside OpenOffice/LibreOffice documents"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Gnome",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "PyGObject",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jact/odfinder"

[project.scripts]
odfinder = "odfinder.command_line:main"

[tool.setuptools]
packages = ["odfinder"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
